<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_gallery" />
        <item
            android:id="@+id/nav_video"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_video" />
        <item
            android:id="@+id/nav_achievement"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_achievement" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_diary" />
        <item
            android:id="@+id/nav_circle"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_circle" />
    </group>

    <group android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/action_settings" />
        </menu>
    </group>

</menu>
